--- a/.github/workflows/publish-staging.yml
+++ b/.github/workflows/publish-staging.yml
@@ -39,7 +39,7 @@ jobs:
         run: yarn build
         env:
           STAGING: true
-          STAGING_PATH_PREFIX: ${{ inputs.destination_dir }}
+          STAGING_PATH_PREFIX: snaps-directory-staging/${{ inputs.destination_dir }}
           PREFIX_PATHS: true
       - name: Deploy to `${{ inputs.destination_dir }}` directory of `gh-pages` branch
         uses: peaceiris/actions-gh-pages@de7ea6f8efb354206b205ef54722213d99067935
