Run publish job in staging environment

--- a/.github/workflows/publish-staging-site.yml
+++ b/.github/workflows/publish-staging-site.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   publish-site-to-gh-pages:
     name: Publish staging site to GitHub Pages
+    environment: staging
     runs-on: ubuntu-latest
     steps:
       - name: Ensure `destination_dir` is not empty
