--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,22 @@ jobs:
     name: Build, lint, and test
     uses: ./.github/workflows/build-lint-test.yml
 
+  publish-staging:
+    name: Publish staging site
+    uses: ./.github/workflows/publish-staging.yml
+    permissions:
+      contents: read
+      pull-requests: write
+    secrets:
+      PUBLISH_STAGING_PAGES_TOKEN: ${{ secrets.PUBLISH_STAGING_PAGES_TOKEN }}
+
   all-jobs-completed:
     name: All jobs completed
     runs-on: ubuntu-latest
     needs:
       - check-workflows
       - build-lint-test
+      - publish-staging
     outputs:
       PASSED: ${{ steps.set-output.outputs.PASSED }}
     steps:
