--- a/.github/workflows/publish-staging-site.yml
+++ b/.github/workflows/publish-staging-site.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run build script
         run: yarn build
         env:
-          STAGING: true
+          GATSBY_STAGING: true
           STAGING_PATH_PREFIX: snaps-directory-staging/${{ inputs.destination_dir }}
           PREFIX_PATHS: true
       - name: Deploy to `${{ inputs.destination_dir }}` directory of `gh-pages` branch
