--- a/.github/workflows/publish-staging.yml
+++ b/.github/workflows/publish-staging.yml
@@ -38,8 +38,7 @@ jobs:
             const comment = data.find(
               (comment) =>
                 comment.user.login === 'github-actions[bot]' &&
-                (comment.body.includes('Staging website successfully published') ||
-                  comment.body.includes('Staging website successfully republished')),
+                comment.body.includes('successfully pushed to staging website'),
             );
 
             if (comment) {
@@ -47,14 +46,14 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 comment_id: comment.id,
-                body: `Commit \`${{ github.sha }}\` successfully pushed to staging website:\n\nhttps://metamask.github.io/snaps-directory-staging/pr/${context.issue.number}/`,
+                body: `Commit \`${context.sha}\` successfully pushed to staging website:\n\nhttps://metamask.github.io/snaps-directory-staging/pr/${context.issue.number}/`,
               });
             } else {
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                body: `Commit \`${{ github.sha }}\` successfully pushed to staging website:\n\nhttps://metamask.github.io/snaps-directory-staging/pr/${context.issue.number}/`,
+                body: `Commit \`${context.sha}\` successfully pushed to staging website:\n\nhttps://metamask.github.io/snaps-directory-staging/pr/${context.issue.number}/`,
               });
             }
 
