--- a/.github/workflows/publish-staging.yml
+++ b/.github/workflows/publish-staging.yml
@@ -46,14 +46,14 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 comment_id: comment.id,
-                body: `Commit \`${process.env.GITHUB_SHA}\` successfully pushed to staging website:\n\nhttps://metamask.github.io/snaps-directory-staging/pr/${context.issue.number}/`,
+                body: `Commit \`${{ github.event.pull_request.head.sha }}\` successfully pushed to staging website:\n\nhttps://metamask.github.io/snaps-directory-staging/pr/${context.issue.number}/`,
               });
             } else {
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                body: `Commit \`${process.env.GITHUB_SHA}\` successfully pushed to staging website:\n\nhttps://metamask.github.io/snaps-directory-staging/pr/${context.issue.number}/`,
+                body: `Commit \`${{ github.event.pull_request.head.sha }}\` successfully pushed to staging website:\n\nhttps://metamask.github.io/snaps-directory-staging/pr/${context.issue.number}/`,
               });
             }
 
