--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@lingui/react": "^4.4.2",
     "@metamask/logo": "^3.1.1",
     "@metamask/providers": "^14.0.0",
+    "@metamask/slip44": "^3.1.0",
     "@metamask/snaps-controllers": "^5.0.0",
     "@metamask/snaps-sdk": "^1.3.2",
     "@metamask/utils": "^8.1.0",
