--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@chakra-ui/anatomy": "^2.2.0",
     "@chakra-ui/gatsby-plugin": "^3.1.3",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.0",
     "@chakra-ui/styled-system": "^2.9.1",
     "@emotion/react": "^11.11.1",
@@ -75,7 +76,9 @@
     "react-redux": "^8.1.2",
     "react-use-fusejs": "^2.0.2",
     "redux": "^4.2.1",
-    "semver": "^7.5.4"
+    "semver": "^7.5.4",
+    "viem": "^1.19.13",
+    "wagmi": "^1.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
@@ -99,6 +102,8 @@
     "@types/jest-image-snapshot": "^6.2.1",
     "@types/jest-when": "^3.5.3",
     "@types/node": "^20.3.3",
+    "@types/node-fetch": "^2.6.9",
+    "@types/node-fetch-cache": "^3.0.4",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
