--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "prettier-plugin-packagejson": "^2.3.0",
     "sharp": "^0.32.5",
     "simple-git-hooks": "^2.9.0",
+    "ts-morph": "^21.0.1",
     "typescript": "~4.8.4"
   },
   "packageManager": "yarn@3.6.3",
