--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "jest-when": "^3.6.0",
     "jimp": "^0.22.10",
     "lint-staged": "^14.0.1",
+    "nanoid": "^3.3.7",
     "node-fetch-cache": "^3.1.3",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
