--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "@lingui/react": "^4.4.2",
     "@metamask/logo": "^3.1.1",
     "@metamask/providers": "^14.0.0",
-    "@metamask/slip44": "^3.1.0",
-    "@metamask/snaps-controllers": "^5.0.0",
-    "@metamask/snaps-sdk": "^2.0.0",
+    "@metamask/snaps-controllers": "^6.0.0",
+    "@metamask/snaps-sdk": "^3.0.0",
+    "@metamask/snaps-utils": "^7.0.0",
     "@metamask/utils": "^8.1.0",
     "@reduxjs/toolkit": "^1.9.6",
     "framer-motion": "^10.16.2",
@@ -94,7 +94,6 @@
     "@metamask/eslint-config-nodejs": "^12.0.0",
     "@metamask/eslint-config-typescript": "^12.0.0",
     "@metamask/snaps-registry": "^3.0.0",
-    "@metamask/snaps-utils": "^6.0.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
@@ -136,12 +135,14 @@
     "jest-when": "^3.6.0",
     "jimp": "^0.22.10",
     "lint-staged": "^14.0.1",
+    "nanoid": "^3.3.7",
     "node-fetch-cache": "^3.1.3",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
     "sharp": "^0.32.5",
     "simple-git-hooks": "^2.9.0",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "webpack": "^5.90.3"
   },
   "packageManager": "yarn@3.6.3",
   "engines": {
