--- a/package.json
+++ b/package.json
@@ -67,13 +67,14 @@
     "@metamask/utils": "^8.1.0",
     "@reduxjs/toolkit": "^1.9.6",
     "framer-motion": "^10.16.2",
-    "gatsby": "^5.12.12",
+    "gatsby": "^5.13.3",
     "linkify-react": "^4.1.1",
     "linkifyjs": "^4.1.1",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-redux": "^8.1.2",
     "react-use-fusejs": "^2.0.2",
     "redux": "^4.2.1",
@@ -121,6 +122,7 @@
     "fuse.js": "^6.6.2",
     "gatsby-plugin-fusejs": "^2.0.2",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-react-helmet-async": "^1.2.3",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-segment-js": "^5.0.0",
     "gatsby-plugin-sharp": "^5.12.0",
