--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@reduxjs/toolkit": "^1.9.6",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.13.3",
+    "gatsby-plugin-image": "^3.13.1",
     "linkify-react": "^4.1.1",
     "linkifyjs": "^4.1.1",
     "lodash": "^4.17.21",
@@ -125,10 +126,10 @@
     "gatsby-plugin-react-helmet-async": "^1.2.3",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-segment-js": "^5.0.0",
-    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.12.0",
-    "gatsby-source-filesystem": "^5.12.0",
-    "gatsby-transformer-sharp": "^5.12.0",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "graphql-type-json": "^0.3.2",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.7.0",
