--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lang:compile": "lingui compile",
     "lang:extract": "lingui extract --clean",
     "lint": "yarn lint:eslint && yarn lint:constraints && yarn lint:misc --check && yarn lint:dependencies --check && yarn lint:changelog",
-    "lint:changelog": "auto-changelog validate",
+    "lint:changelog": "auto-changelog validate --prettier",
     "lint:constraints": "yarn constraints",
     "lint:dependencies": "depcheck && yarn dedupe",
     "lint:eslint": "eslint . --cache --ext js,ts,tsx",
