--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@metamask/snaps-utils": "^8.8.0",
     "@metamask/utils": "^11.0.1",
     "@reduxjs/toolkit": "^1.9.6",
+    "fastest-levenshtein": "^1.0.16",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.13.3",
     "gatsby-plugin-image": "^3.13.1",
@@ -78,7 +79,6 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-redux": "^8.1.2",
-    "react-use-fusejs": "^2.0.2",
     "redux": "^4.2.1",
     "semver": "^7.5.4"
   },
@@ -122,7 +122,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "fast-deep-equal": "^3.1.3",
     "fuse.js": "^6.6.2",
-    "gatsby-plugin-fusejs": "^2.0.2",
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-react-helmet-async": "^1.2.3",
     "gatsby-plugin-robots-txt": "^1.8.0",
