--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cookie": "^0.7.1",
     "es5-ext": "^0.10.63",
     "express": "^4.21.2",
+    "lmdb": "2.9.4",
     "path-to-regexp": "^0.1.12",
     "sharp": "^0.34.2",
     "ws": "^8.17.1",
